# dundungeons-and-dragons

./: README.MD  alembic.ini  dungeon_dragon.db  pyproject.toml  run.py
board/: board.py  maze.py
characters/: base_character.py  dragon.py  game_characters.py  user.py
data_base/: dataBase.json
database/: core.py
database/migrations/: env.py
database/migrations/versions/: 87fd6a5d5c80_added_account_table.py  be533395d7b3_added_account_table.py  ff6ac3f3aed7_added_account_table.py
docs/: alembic.md
dungeons_dragons/controller/: __init__.py
dungeons_dragons/controller/authentication/: authentication.py
dungeons_dragons/controller/characters/: __init__.py  base_character.py  dragon.py  game_characters.py  user.py
dungeons_dragons/controller/check/: check.py
dungeons_dragons/controller/main/: main_controller.py
dungeons_dragons/controller/point/: point.py
dungeons_dragons/controller/sweets/: sweets.py
dungeons_dragons/models/: __init__.py  user.py
dungeons_dragons/view/: __init__.py  board.py  clear_screen.py  inputs.py  maze.py  prints.py
helper/: enums.py  exceptions.py  messages.py  tools.py
kernel/: application.py
painless/helper/: enums.py  exceptions.py  get_key.py  messages.py  probability.py  tools.py
point/: point.py
setting/: game_settings.py  loggerConfig.toml
